<?xml version="1.0" encoding="utf-8"?>
<!--Basil Eldhose 301116808 Sec 002 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="626dp"
    android:background="#FFBB00"
    android:fontStyle="italic"
    android:orientation="vertical"
    tools:context=".EldhoseFragment">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_service"
        android:id="@+id/launchService"></Button>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/startAnimation"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:id="@+id/stopAnimation"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_50"
            android:id="@+id/d50"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100"
            android:id="@+id/d100"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_150"
            android:id="@+id/d150"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_200"
            android:id="@+id/d200"></Button>
    </LinearLayout>
    <ImageView
        android:id="@+id/ImageViewG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ImageView>
</LinearLayout>