<?xml version="1.0" encoding="utf-8"?>
<!--Basil Eldhose 301116808 Sec 002 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D89494"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/basil_eldhose_301116808"
        android:textSize="25sp"
        tools:context=".BasilFragment" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:src="@mipmap/and" />

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="156dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_thickness"></TextView>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="34dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/line_color"></TextView>

            <RadioGroup
                android:id="@+id/colorGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <RadioButton
                    android:id="@+id/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red"></RadioButton>

                <RadioButton
                    android:id="@+id/blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blue" />

                <RadioButton
                    android:id="@+id/green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="25dp"
                android:src="@drawable/arrowup" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arraoleft" />

                <ImageButton
                    android:id="@+id/right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrowright" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="25dp"

                android:src="@drawable/arrowdown" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ImageViewForDrawing"
            android:layout_width="264dp"
            android:layout_height="358dp"
            android:layout_margin="20px"
            android:minWidth="600px"
            android:minHeight="600px"></ImageView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_canvas"
        android:id="@+id/canvasClear"></Button>
    </LinearLayout>
</LinearLayout>